resources/assets/sass/custom.sass
.btn-primary:hover
  transform: translateY(-1px)
  box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08)

.help-block
  opacity: 0.9
  font-size: 0.85em
  padding-bottom: 10px

label
  margin-bottom: 0


@media only screen and (min-width: 600px)
  .row-after-search
    margin-top: 42px

@media only screen and (max-width: 600px)
    a
      display: block
      margin: 7px 0

